--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Document</title>
+    <title>Hila Peled - web developer</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -29,7 +29,7 @@
           <h3>Hila Peled</h3>
           <p>Web develop</p>
         </div>
-        <nav>
+        <nav id="nav_open">
           <ul>
             <li>
               <a href="#">Home</a>
@@ -48,6 +48,12 @@
             </li>
           </ul>
         </nav>
+        <div id="burger_btn" class="burger">
+          <i class="fa fa-bars" aria-hidden="true"></i>
+        </div>
+      </div>
+      <div class="header">
+        <h1>WEB DEVELOP</h1>
       </div>
     </div>
 
@@ -83,8 +89,87 @@
               facilis expedita culpa sapiente et.
             </p>
           </div>
+          <!-- end box -->
+          <div class="box">
+            <i class="fa fa-github" aria-hidden="true"></i>
+            <h4>GitHub</h4>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Voluptatum, illum consectetur fugit accusamus rem excepturi
+              facilis expedita culpa sapiente et.
+            </p>
+          </div>
+          <!-- end box -->
+          <div class="box">
+            <i class="fa fa-laptop" aria-hidden="true"></i>
+            <h4>Develop</h4>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Voluptatum, illum consectetur fugit accusamus rem excepturi
+              facilis expedita culpa sapiente et.
+            </p>
+          </div>
+          <!-- end box -->
+          <div class="box">
+            <i class="fa fa-universal-access" aria-hidden="true"></i>
+            <h4>Accessibility</h4>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Voluptatum, illum consectetur fugit accusamus rem excepturi
+              facilis expedita culpa sapiente et.
+            </p>
+          </div>
+          <!-- end box -->
+          <div class="box">
+            <i class="fa fa-code" aria-hidden="true"></i>
+            <h4>Tools</h4>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Voluptatum, illum consectetur fugit accusamus rem excepturi
+              facilis expedita culpa sapiente et.
+            </p>
+          </div>
+          <!-- end box -->
         </div>
       </div>
     </div>
+    <main>
+      <div class="row">
+        <div class="box" style="background-image: url(images/divP3.jpeg)">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis
+            magnam aliquam vero. Quis illo beatae, facilis obcaecati
+            consequuntur sint exercitationem?
+          </p>
+        </div>
+        <!-- end box  -->
+        <div class="box" style="background-image: url(images/divP4.jpeg)">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis
+            magnam aliquam vero. Quis illo beatae, facilis obcaecati
+            consequuntur sint exercitationem?
+          </p>
+        </div>
+        <!-- end box  -->
+        <div class="box" style="background-image: url(images/divP2.jpeg)">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis
+            magnam aliquam vero. Quis illo beatae, facilis obcaecati
+            consequuntur sint exercitationem?
+          </p>
+        </div>
+        <!-- end box  -->
+        <div class="box" style="background-image: url(images/divP1.jpeg)">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis
+            magnam aliquam vero. Quis illo beatae, facilis obcaecati
+            consequuntur sint exercitationem?
+          </p>
+        </div>
+        <!-- end box  -->
+      </div>
+    </main>
+    <script src="burger.js"></script>
+    c
   </body>
 </html>
