--- a/home.html
+++ b/home.html
@@ -21,6 +21,7 @@
     />
 
     <link rel="stylesheet" href="home.css" />
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <div class="top container-fluid">
